--- a/src/components/shared/Button.astro
+++ b/src/components/shared/Button.astro
@@ -24,7 +24,7 @@ const buttonClass = `${baseClass} ${styleClass}`;
   <slot />
   {
     style === 'tertiary' && (
-      <span class="text-xl transition-transform material-symbols-outlined group-hover:translate-x-1">
+      <span class="material-symbols-outlined text-xl transition-transform group-hover:translate-x-1">
         arrow_right_alt
       </span>
     )
