--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -13,7 +13,7 @@ const description =
     <div class="mb-20 grid grid-cols-1 gap-8 md:grid-cols-12">
       <div class="md:col-span-2">
         <h2
-          class="sticky top-24 inline-block text-sm font-semibold uppercase leading-tight tracking-widest text-secondary-text dark:text-gray-400"
+          class="text-secondary-text sticky top-24 inline-block text-sm font-semibold uppercase leading-tight tracking-widest dark:text-gray-400"
         >
           Work History
         </h2>
@@ -67,7 +67,7 @@ const description =
     <div class="mb-20 grid grid-cols-1 gap-8 md:grid-cols-12">
       <div class="md:col-span-3">
         <h2
-          class="sticky top-24 inline-block text-sm font-semibold uppercase leading-tight tracking-widest text-secondary-text dark:text-gray-400"
+          class="text-secondary-text sticky top-24 inline-block text-sm font-semibold uppercase leading-tight tracking-widest dark:text-gray-400"
         >
           Client Work
         </h2>
