--- a/src/components/RecentWork.astro
+++ b/src/components/RecentWork.astro
@@ -17,12 +17,12 @@ const projects = projectsData.projects.slice(0, 3); // Show only first 2 project
       </div>
       <div class="flex w-[175px] justify-start md:justify-end">
         <a
-          class="group inline-flex items-center gap-2 border-b-2 border-primary pb-1 font-semibold text-primary transition-all hover:border-secondary-text hover:text-secondary-text dark:border-white dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300"
+          class="border-primary text-primary hover:border-secondary-text hover:text-secondary-text group inline-flex items-center gap-2 border-b-2 pb-1 font-semibold transition-all dark:border-white dark:text-white dark:hover:border-gray-300 dark:hover:text-gray-300"
           href="/projects"
         >
           View All Projects
           <span
-            class="text-xl transition-transform material-symbols-outlined group-hover:translate-x-1"
+            class="material-symbols-outlined text-xl transition-transform group-hover:translate-x-1"
             >arrow_right_alt</span
           >
         </a>
