--- a/src/components/ThumbnailProject.astro
+++ b/src/components/ThumbnailProject.astro
@@ -18,7 +18,7 @@ const { id, icon, title, shortDescription, tags, githubUrl, liveUrl } = Astro.pr
   <div class="flex flex-1 flex-col justify-start">
     <div class="mb-4">
       <div class="flex flex-row">
-        <span class="mb-6 text-5xl text-primary material-symbols-outlined dark:text-white"
+        <span class="text-primary material-symbols-outlined mb-6 text-5xl dark:text-white"
           >{icon}</span
         >
         <div class="ml-auto flex flex-row justify-end gap-2">
@@ -28,11 +28,11 @@ const { id, icon, title, shortDescription, tags, githubUrl, liveUrl } = Astro.pr
       </div>
       <a href={`/project/${id}`} class="block">
         <h3
-          class="mb-3 text-md font-bold text-primary transition-colors group-hover:text-purple-600 dark:text-white dark:group-hover:text-purple-400"
+          class="text-md text-primary mb-3 font-bold transition-colors group-hover:text-purple-600 dark:text-white dark:group-hover:text-purple-400"
         >
           {title}
         </h3>
-        <p class="mb-6 text-sm leading-relaxed text-secondary-text dark:text-gray-400">
+        <p class="text-secondary-text mb-6 text-sm leading-relaxed dark:text-gray-400">
           {shortDescription}
         </p>
       </a>
