fix: safari logo

--- a/src/components/shared/Logo.astro
+++ b/src/components/shared/Logo.astro
@@ -1,19 +1,14 @@
 <svg
   fill="currentColor"
   version="1.1"
-  id="Layer_1"
   xmlns="http://www.w3.org/2000/svg"
-  xmlns:xlink="http://www.w3.org/1999/xlink"
-  x="0px"
-  y="0px"
   viewBox="0 0 560 560"
-  style="enable-background:new 0 0 560 560;"
-  xml:space="preserve"
+  width="100%"
+  height="100%"
+  role="img"
+  aria-label="Logo"
 >
   <path
-    id="XMLID_15_"
-    class="st0"
-    d="M427.1,302.4l8.6,73.5c-85.1,39.5-156.6,111.8-156.6,111.8s-71.5-72.3-156.6-111.8l8.6-73.5
-	l148,89.1L427.1,302.4z M555.3,208.3L280,373L89.2,259.2v199l-20.6-14.5V246.9L3,207.8L280,78L555.3,208.3z"
+    d="M427.1,302.4l8.6,73.5c-85.1,39.5-156.6,111.8-156.6,111.8s-71.5-72.3-156.6-111.8l8.6-73.5l148,89.1L427.1,302.4z M555.3,208.3L280,373L89.2,259.2v199l-20.6-14.5V246.9L3,207.8L280,78L555.3,208.3z"
   ></path>
 </svg>
